Writing of 1 test