@@ -20,9 +20,25 @@
 
 	<build>
 		<plugins>
+			<!-- Plugin Spring Boot Maven -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						<jvmArgument>-XX:+EnableDynamicAgentLoading</jvmArgument>
+					</jvmArguments>
+				</configuration>
+			</plugin>
+
+			<!-- Plugin Maven Surefire dla testów -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
